<resources>
    <string name="app_name">SyncShot</string>
    <string name="welcome">Welcome</string>
    <string name="skip">SKIP</string>
    <string name="todo">TODO</string>
    <string name="bg1">bg1</string>
    <string name="bg2">bg2</string>
    <string name="bg3">bg3</string>
    <string name="bg4">bg4</string>
    <string name="pg1">pg1</string>
    <string name="pg2">pg2</string>
    <string name="pg3">pg3</string>
    <string name="pg4">pg4</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="select_background">Select Background</string>
    <string name="select_pose">Select Pose</string>
    <string name="holi">Holi</string>
    <string name="birthday">Birthday</string>
    <string name="diwali">Diwali</string>
    <string name="outdoor">Outdoor</string>
    <string name="yoga_1">Yoga-1</string>
    <string name="team_up_1">Team Up-1</string>
    <string name="standing_1">Standing-1</string>
    <string name="sqad_game_1">Sqad Game-1</string>
    <string name="add_people">Invite People</string>
    <string name="person_1">Person 1</string>
    <string name="person_2">Person 2</string>
    <string name="cam">cam</string>
    <string name="back">back</string>
    <string name="next">NEXT</string>
    <string name="take_photo">Take Photo</string>
    <string name="title_activity_scroll_view">scroll_view</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>